fix x overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -514,6 +514,9 @@ h4.contact_detail {
 }
 
 @media (max-width: 700px) {
+  .navContainer {
+    height: 8vh;
+  }
   .Landing .Name {
     margin-top: 30vh;
   }
